[package]
name = "imgmod"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.32", features = ["derive"]}
crc = "3.2.1"
image =  { version = "0.25.6", default-features = false, features = ["png", "jpeg", "tiff", "webp"]}
reqwest = {version = "0.12.15", features = ["blocking"]}

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
assert_cmd = "2.0.16"
libafl = { version = "0.15.2", default-features = false }

[[bin]]
name = "ImgMod"
path = "src/main.rs"
